update cv[en]. update about. update collaborations (imgs/txts)

--- a/_posts/collaborations/2010-11-15-e-ansa.md
+++ b/_posts/collaborations/2010-11-15-e-ansa.md
@@ -6,22 +6,20 @@ www: http://www.onascimento.com/#/e-ans/
 collab: http://www.onascimento.com/
 cover: assets/collaborations/e-ansa/eansa_02.jpg
 ---
-![]({{ "assets/collaborations/e-ansa/e-ansa_sensor.jpg" | relative_url }})
+![]({{ "assets/collaborations/e-ansa/eansa_mis_00.jpg" | relative_url }})
 
-This was a collaboration with [Ricardo O'Nascimento](http://www.onascimento.com/){:target="_blank"}, while I was working as a technical adviser for the artistic residents at the São Paulo Museum of Image and Sound.
+This was a collaboration with [Ricardo O'Nascimento](https://www.onascimento.com/){:target="_blank"}, while I was working as a technical adviser for the artistic residents at the São Paulo Museum of Image and Sound.
 
-The project involved making a dress that would produce visual and tactile responses to the presence of cell phone signals. There's more info at Ricardo's [page](http://www.onascimento.com/e-ans/){:target="_blank"}.
+The project involved making a dress that would produce visual and tactile responses to the presence of cell phone signals. There's more info at Ricardo's [site](https://www.onascimento.com/eans-2010){:target="_blank"}.
 
-{% include youtube.html id="tmwED62V0W8" ratio="16x9" %}
-
-For this project, I modified a simple RF detector antenna circuit to respond to the right signal frequencies, and used 4 of these sensor circuits to detect the presence and rough location of active cell phone signals around the dress.
+For this project, I modified a simple RF detector antenna circuit to respond to the right signal frequencies, and used four of these sensor circuits to detect the presence and rough location of active cell phone signals around the dress.
 
 An Arduino was used to read the sensor values and control 25 columns of small computer fans independently. We could have programmed wave patterns around the dress, but ended up using simpler patterns that were more visually apparent.
 
-{% include swipebox.html prefix="eansa" %}}
+{% include swipebox.html prefix="eansa_mis_0" %}
 
-There were a lot of fans! and a lot of wire!
+{% include swipebox.html prefix="eansa_0" %}
 
-This project has been shown in a variety of festivals and exhibitions, and in 2012 it won an award at the [International Festival for Computer Based Art](http://t-m-a.de/cynetart/cfp-2012/preistrager?lang=en){:target="_blank"} in Dresden.
+{% include youtube.html id="tmwED62V0W8" ratio="16x9" %}
 
-{% include vimeo.html id="54222659" %}
+<!-- {% include vimeo.html id="54222659" %} -->
