--- a/_posts/collaborations/2016-08-08-lgqd.md
+++ b/_posts/collaborations/2016-08-08-lgqd.md
@@ -3,7 +3,7 @@ category: collaboration
 title: Laboratório Gráfico Queer/Desviante
 github: https://github.com/thiagohersan/LabGraficoCidadeQueer
 www: http://www.lgdesviante.org/
-collab: http://www.cidadequeer.lanchonete.org/
+collab: https://www.cidadequeer.lanchonete.org/
 ---
 ![]({{ "assets/collaborations/lgqd/lgqd00.jpg" | relative_url }})
 
@@ -13,7 +13,7 @@ To all appearances, queer is a term that came to Brazil by plane, landing in the
 
 In the case of queer, it was no different. Originating in the English language, its signifier and signified went through changes over time, and became not only an international concept, nowadays part of the LGBTQIA acronym, but also a qualifier of the cultural industry (as in the TV show “Queer Eye for the Straight Guy”). If in an English-speaking country I designate someone as queer, it is within the limits of clarity. Yet, what would queer designate in Brazil? Is there something unknown that will now be pointed as queer? Would it then be possible to translate it? Barbarize it? Classify it under a norm? How can one do so without normalizing it?
 
-Within the universe of such questionings, and knowing that the [Cidade Queer](http://www.cidadequeer.lanchonete.org/){:target="_blank"} program would result in a book, the [Laboratório Gráfico Queer/Desviante](http://www.lgdesviante.org/){:target="_blank"} came to life. Its purpose was to collectively investigate the possibilities of signifier and signified, formalities, lexical creations, as well as problematizing the visual representation surrounding queer.
+Within the universe of such questionings, and knowing that the [Cidade Queer](https://www.cidadequeer.lanchonete.org/){:target="_blank"} program would result in a book, the [Laboratório Gráfico Queer/Desviante](http://www.lgdesviante.org/){:target="_blank"} came to life. Its purpose was to collectively investigate the possibilities of signifier and signified, formalities, lexical creations, as well as problematizing the visual representation surrounding queer.
 
 ### LGQ/D
 The Laboratory had four meetings, of nearly three hours each, to discuss and study problems around queer and denormatization in both visual and written language. The lab’s most important principle is not to establish new paradigms, i.e., not to think that a problem is solved with the creation
