--- a/_posts/collaborations/2012-09-01-auras.md
+++ b/_posts/collaborations/2012-09-01-auras.md
@@ -8,9 +8,7 @@ cover: assets/collaborations/auras/bio01.jpg
 
 The [Kirlian photography apparatus]({{ "kirlian-machine/" | relative_url }}) that I built together with Livia Chagas and Wemerson Machado worked pretty well for taking pictures of fingers, plants, coins and other metallic objects, but it was not very practical for taking pictures of someone's entire aura.
 
-And this is where we start bending this project's own notion of authenticity. Like many other works of art, it's all about context and constructed narratives. Like many other acts of charlatanism, it's all about context and constructed narratives.
-
-This is one way of taking pictures of someone's aura. This might not be art. This might not be technology. This might not be magic.
+And this is where we start bending this project's own notion of authenticity. Like many other works of art, it's all about context and constructed narratives. Like many other acts of charlatanism, it's all about context and constructed narratives. This is one way of taking pictures of someone's aura.
 
 What it is: a method for taking digital double-exposure photographs. A camera is placed inside a box with a shutter. The subject of the photograph is told to hold on to a biofeedback sensor. When the camera's shutter release button is pushed, it activates a series of events inside this box, some of which may or may not correspond to the subject's aura strength. At the end of this process, the box's shutter is opened for a fraction of a second and the subject's aura is captured in glorious digital fashion.
 
@@ -19,5 +17,4 @@ For those who get a kick out of reading manuscripts, the mechanism looked someth
 ![]({{ "assets/collaborations/auras/bio_sch.jpg" | relative_url }})
 
 And my aura looks something like this:
-
-![]({{ "assets/collaborations/auras/8250930198_feba496c64_o.jpg" | relative_url }})
+{% include swipebox.html prefix="auras_tgh" %}
