update acervos links

--- a/_posts/works/2025-09-01-acervos.md
+++ b/_posts/works/2025-09-01-acervos.md
@@ -19,7 +19,7 @@ This is a research group funded by a [FAPESP](https://revistapesquisa.fapesp.br/
 
 My contributions have been in the development of prototypes for experimenting with Artificial Intelligence and Machine Learning techniques that allow for different ways of creating, augmenting and updating existing digital archives of public interest.
 
-### Meta-Acervos
+### [Meta-Acervos](https://acervos-digitais.github.io/acervos-interface-dev/en/){:target="_blank"}
 
 The most recent project developed within this context involved creating a prototype to facilitate search and navigation of digital images of art works from Brazilian museum collections.
 
@@ -52,7 +52,7 @@ A prototype to navigate these collections and create visualizations is available
 A longer article about this project is forthcoming.
 
 
-### Arquigrafia
+### [Arquigrafia](https://acervos-digitais.github.io/arquigrafia-interface/en.html#clusters){:target="_blank"}
 
 An earlier project developed within the Acervos Digitais research group was a collaboration with another research group that maintains an open database of crowd-contributed pictures of architecturally significant places and structures throughout Brazil.
 
@@ -74,7 +74,8 @@ All of the generated metadata is available as a collection of [JSON files](https
 Our internal interface for testing and verifying the models and results can be accessed [here](https://acervos-digitais.github.io/arquigrafia-interface/en.html#clusters){:target="_blank"}.
 
 
-### 08 January
+### [08 January](https://acervos-digitais.github.io/oito-um-interface/){:target="_blank"}
+
 The first project developed in the Acervos group was an interface to help navigate the more than 500 hours of security camera footage recorded on [08 January, 2023](https://en.wikipedia.org/wiki/8_January_Brasília_attacks){:target="_blank"}, the day violent mobs invaded Brazil's federal government buildings in Brasília.
 
 ![]({{ "assets/projects/acervos/acervos-0801_00.webp" | relative_url }})
